# gnome-paint

./: Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac
data/: Makefile.in
data/desktop/: Makefile.in
data/icons/: Makefile.in
data/icons/16x16/: Makefile.in
data/icons/16x16/actions/: Makefile.in
data/icons/16x16/apps/: Makefile.in
data/ui/: Makefile.in  gnome_paint.ui
debian/: changelog  control  copyright  rules
debian/patches/: 0007-Included-patch-by-Juan-Balderas-crash-in-toolbar.patch  0008-Included-patch-by-Logan-Rosen-and-one-other-gdk-func.patch  0009-Merged-new-translations.patch  0010-POLICORP-translation-pt_BR.patch  series
debian/upstream/: metadata
po/: LINGUAS  POTFILES.in  ar.po  cs.po  da.po  de.po  es.po  es_MX.po  fr.po  he.po  it.po  nb.po  pt.po  pt_BR.po  ru.po  tr.po  vi.po  zh_CN.po  zh_TW.po
src/: Makefile.am  Makefile.in  clipboard.c  color.c  common.h  cv_airbrush_tool.c  cv_airbrush_tool.h  cv_color_pick_tool.h  cv_curve_tool.h  cv_drawing.c  cv_drawing.h  cv_ellipse_tool.h  cv_eraser_tool.c  cv_eraser_tool.h  cv_flood_fill_tool.c  cv_paintbrush_tool.c  cv_paintbrush_tool.h  cv_rect_select.c  cv_resize.c  cv_resize.h  gp-image.c  gp-image.h  gp_point_array.c  image_menu.c  image_menu.h  main.c  pixbuf_util.c  pixbuf_util.h  selection.c  selection.h  toolbar.c  toolbar.h  undo.c
src/pixmaps/: Makefile.am  Makefile.in
