
pixmaps_HEADERS = \
	brush_0.xpm\
	brush_1.xpm \
	brush_2.xpm \
	brush_3.xpm \
	brush_4.xpm \
	brush_5.xpm \
	brush_6.xpm \
	brush_7.xpm \
	brush_8.xpm \
	brush_9.xpm \
	brush_10.xpm \
	brush_11.xpm \
	erase_0.xpm \
	erase_1.xpm \
	erase_2.xpm \
	erase_3.xpm \
	line_0.xpm \
	line_1.xpm \
	line_2.xpm \
	line_3.xpm \
	line_4.xpm \
	rect0.xpm \
	rect1.xpm \
	rect2.xpm \
	sel1.xpm \
	sel2.xpm

pixmapsdir = \
	$(pkgincludedir)

EXTRA_DIST = \
	$(pixmaps_HEADERS)

## File created by the gnome-build tools

